[gd_scene load_steps=5 format=2]

[ext_resource path="res://graphics/UI/Charsheet/Selector.PNG" type="Texture" id=1]
[ext_resource path="res://Fonts/Font_res.tres" type="DynamicFont" id=2]
[ext_resource path="res://graphics/UI/Charsheet/Group 1/Pillow.PNG" type="Texture" id=3]
[ext_resource path="res://scenes/charsheet/Selector.gd" type="Script" id=4]

[node name="Selector" type="Node2D"]
script = ExtResource( 4 )

[node name="BG" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Back" type="Button" parent="."]
margin_left = -259.0
margin_top = -307.0
margin_right = -162.0
margin_bottom = 93.0
custom_fonts/font = ExtResource( 2 )
text = "<"

[node name="Next" type="Button" parent="."]
margin_left = 161.0
margin_top = -307.0
margin_right = 258.0
margin_bottom = 93.0
custom_fonts/font = ExtResource( 2 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Done" type="Button" parent="."]
margin_left = -254.0
margin_top = 213.0
margin_right = 255.0
margin_bottom = 312.0
custom_fonts/font = ExtResource( 2 )
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot" type="Label" parent="."]
margin_left = -153.0
margin_top = -306.0
margin_right = 151.0
margin_bottom = -231.0
custom_fonts/font = ExtResource( 2 )
text = "Body"
align = 1
valign = 1

[node name="Bonus" type="Label" parent="."]
margin_left = -252.0
margin_top = 109.0
margin_right = 255.0
margin_bottom = 198.0
custom_fonts/font = ExtResource( 2 )
text = "0 to defense"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="Sprite" parent="."]
position = Vector2( 0, -65.5899 )
texture = ExtResource( 3 )

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Done" to="." method="_on_Done_pressed"]
